--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<title>Finance</title>
-		<base href="/" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="icon" type="image/x-icon" href="favicon.ico" />
-	</head>
+  <head>
+    <meta charset="utf-8" />
+    <title>Angular Tailwind</title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  </head>
 
-	<body class="font-poppins">
-		<app-root></app-root>
-	</body>
+  <body class="font-poppins">
+    <app-root></app-root>
+  </body>
 </html>
